--- a/website/public/styles/site.css
+++ b/website/public/styles/site.css
@@ -5895,6 +5895,11 @@ h6 {
   text-transform: uppercase;
   font-size: 56px; }
 
+@media (max-width: 768px) {
+  .major-header.-title {
+    text-transform: uppercase;
+    font-size: 36px; } }
+
 .first-section {
   text-align: center;
   margin-bottom: 120px; }
